# skland-attendance-py

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: attendance.yml
skland_attendance/: cli.py  client.py  config.py  formatters.py  models.py  retry.py
skland_attendance/attendance/: __init__.py  handlers.py  runner.py
