[project]
name = "skland-attendance-py"
version = "0.0.1"
description = "Skland auto attendance implemented in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
skland-attendance = "skland_attendance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skland_attendance"]
